syntax = "proto3";

option csharp_namespace = "AElf.Contracts.CrossChain";

import "common.proto";
import "resource.proto";

enum SideChainStatus
{
    Undefined = 0;
    Pending = 1;
    Active = 2;
    Terminated = 3;
}

message SideChainInfo
{
    uint64 SerialNumer = 1;
    Hash ChainId = 2;
    SideChainStatus Status = 3;
    Address LockedAddress = 4;
    uint64 LockedToken = 5;
    uint64 CreationHeight = 6;
    repeated ResourceTypeBalancePair ResourceBalances = 7;    
}
